# MSYS2-libcommon

./: .clang-tidy  CMakeLists.txt  ini.cmake
include/common/: defines.h  ini.h  util-common.h
include/pacman/common/: ini.h  util-common.h
share/: LibCommonConfig.cmake.in
src/common/: ini.c  util-common.c
src/pacman/common/: ini.c  util-common.c
